--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -397,3 +397,11 @@ margin-top: 40px;
 .kennsaku2{
 	height: 30px;
 }
+.tuika{
+	margin: 30px;
+	width: 200px;
+}
+.my{
+	padding-top: 20px;
+	margin: 0 auto;
+}
