--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -403,5 +403,19 @@ margin-top: 40px;
 }
 .my{
 	padding-top: 20px;
+	padding-bottom: 10px;
 	margin: 0 auto;
+}
+.conndatechoice{
+	font-size: 30px;
+}
+.conndatechoice th{
+	height: 40px;
+}
+.conndatechoice td{
+	background-color: white;
+	height: 80px;
+	}
+.conndatechoice aaaa{
+	height:30px ;
 }
