--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -9,18 +9,10 @@
 			<header th:replace="header"></header>
 
 			<h1 class="my">Myメニュー追加登録</h1>
-			
-			<div class="red">
-			<th:block>
-				<span style="color: red;">[[${message1}]]</span><br>
-				<span style="color: red;">[[${message2}]]</span><br>
-			</th:block>
-			</div>
-
 
 	<main>
 		<form action="/menu/add" method="post">
-		<table border="1" class="3">
+		<table border="1" class="table3">
 				<tr>
 					<th>料理名/野菜名</th>
 					<td>
