--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,6 +1,7 @@
 <header>
 	<h1 class="head-title">NutrientsC Site</h1>
-	<span th:text="${@account.name}+' さんがログイン中'"></span>
+	<img src="https://t.pimg.jp/048/484/086/1/48484086.jpg" class="pic">
+	<span class="abc" th:text="${@account.name}+' さんがログイン中'"></span>
 	<br>
 
 
