--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7,7 +7,25 @@ body {
 }
 /* ヘッダー、ナビゲーションメニュー、フッター */
 header, nav{
-  background: #F2F3F4;
+  background: 	#CCFF66;
+}
+.head-title{
+	font-family: Monotype Corsiva;
+	color: white;
+	font-size: 50px;
+	width: 300px;
+	margin-left: auto; margin-right: auto;
+	margin-bottom: 10px;
+}
+.abc{
+	text-align: center;
+	margin-left: 370px;
+}
+.pic{
+	height: 100px;
+	width: 300px;
+	margin-left: -680px;
+	margin-top: -60px;
 }
 footer{
 	font-size: 25px;
@@ -177,7 +195,6 @@ margin-top: 40px;
     height: 100px;
   
 }
-
   /* メニューバー*/
 .menu-btn {
     position: fixed;
@@ -189,7 +206,7 @@ margin-top: 40px;
     justify-content: center;
     align-items: center;
     z-index: 90;
-    background-color:#F2F3F4;
+    
 }
 .menu-btn span,
 .menu-btn span:before,
@@ -218,7 +235,7 @@ margin-top: 40px;
     justify-content: center;
     align-items: center;
     z-index: 90;
-    background-color:#37B049 ;
+    background-color: #FBCB3A;
 }
 .menu-btn span,
 .menu-btn span:before,
@@ -297,7 +314,8 @@ margin-top: 40px;
     top: 0;
     left: 100%;/*leftの値を変更してメニューを画面外へ*/
     z-index: 80;
-    background-color: #F2F3F4;
+    background-color: #FFFF99;
+    opacity: 0.95;
     transition: all 0.5s;/*アニメーション設定*/
 }
 #menu-btn-check:checked ~ .menu-content {
