--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -333,6 +333,7 @@ margin-top: 40px;
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
+    text-align: center;
 }
 .text1:focus {
     outline: 0;
