--- a/src/main/resources/templates/editAccount.html
+++ b/src/main/resources/templates/editAccount.html
@@ -3,13 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>会員登録</title>
-<link rel="stylesheet" type="text/css" href="/css/style1.css">
+<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body class="editaccount-all">
 
-	<div>
-	<h1 class="register-title">NutrientsC Site</h1>
-	</div>
+	<header th:replace="header"></header>
 	
 	<main>
 		<h1>登録情報変更</h1>
