--- a/src/main/resources/templates/accountForm.html
+++ b/src/main/resources/templates/accountForm.html
@@ -210,14 +210,13 @@
 					</td>
 				</tr>
 			</table>
-			
-			<button class="account-register">登録</button>
-			
+				<div class="menumodoru">
+			<button class="tuika">登録</button>
 		</form>
 		<form action="/" method="get">
-			
-			   <button class="account-register">戻る</button>
-		
+		   <button class="modoru1">戻る</button>
+		 </form>
+		 </div>
 		</form>
 	  </div>
 	</main>
