--- a/src/main/resources/templates/editAccount.html
+++ b/src/main/resources/templates/editAccount.html
@@ -83,15 +83,13 @@
 					</td>
 				</tr>
 			</table>
-			
-			<button class="account-register">登録</button>
-			
+			<div class="menumodoru">
+			<button class="tuika">登録</button>
 		</form>
 		<form action="/main" method="get">
-			
-			   <button class="account-register">戻る</button>
-		
-		</form>
+		   <button class="modoru1">戻る</button>
+		 </form>
+		 </div>
 	  </div>
 	</main>
 	<footer th:replace="footer"></footer>
