--- a/src/main/resources/templates/recommend.html
+++ b/src/main/resources/templates/recommend.html
@@ -55,6 +55,9 @@
 	
 	<input type="submit" value="献立検索" class="recommend">
 	</form>
+	<form action="/main" method="get">
+	    <button class="modoru">戻る</button>
+    </form>
 	
 	<footer th:replace="footer"></footer>
 </body>
