--- a/src/main/resources/templates/showRecommend.html
+++ b/src/main/resources/templates/showRecommend.html
@@ -15,6 +15,10 @@
 		</ul>
 	</th:block>
 	
+	<form action="/main" method="get">
+	   <button class="modoru">戻る</button>
+	 </form>	
+	
 	<footer th:replace="footer"></footer>
 </body>
 </html>
