--- a/src/main/resources/templates/week.html
+++ b/src/main/resources/templates/week.html
@@ -21,7 +21,9 @@
 		<br>
 		    </th:block>
 		</th:block>
-		
+	 <form action="/main" method="get">
+	   <button class="modoru1">戻る</button>
+	 </form>
 	<footer th:replace="footer"></footer>
 </body>
 </html>
