--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -90,6 +90,7 @@
 		</th:block>
 	</span>
 	</div>
+	<img src="css/img/job_sensei (2).jpg" width="190px" height="170px" class="mainpic">
 	</div>
 </div>
 	<footer th:replace="footer"></footer>
